Update description and motivation sections

--- a/ERCS/erc-7674.md
+++ b/ERCS/erc-7674.md
@@ -1,7 +1,7 @@
 ---
 eip: 7674
 title: Temporary Approval Extension for ERC-20
-description: An interface for ephemeral ERC-20 approvals
+description: An interface for transaction-scoped ERC-20 approvals
 author: Xenia Shape (@byshape), Mikhail Melnik (@ZumZoom), Hadrien Croubois (@Amxx)
 discussions-to: https://ethereum-magicians.org/t/add-erc-7674-transient-approval-extension-for-erc-20/19521
 status: Draft
@@ -17,7 +17,7 @@ This specification defines the minimum interface required to temporarily approve
 
 ## Motivation
 
-User are often require to set token approval that will only be used once. It is common to leave unexpected approvals after these interactions. [EIP-1153](./eip-1153.md) introduces a cheap way to handle temporarily allowances.
+Token approvals often outlive their utility, as users typically require them for just one initial transaction. It is common to leave unexpected approvals after these interactions. [EIP-1153](./eip-1153.md) introduces a cheap way to handle temporarily allowances.
 
 ## Specification
 
